[gd_scene load_steps=4 format=3 uid="uid://cx4cv7yix0tv1"]

[ext_resource type="PackedScene" uid="uid://h36w7e7ljva5" path="res://Objects/customize_option.tscn" id="1_4yc65"]
[ext_resource type="Script" path="res://Scenes/character_edit.gd" id="1_k1otl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q6kmt"]
bg_color = Color(0.156863, 0.188235, 0.215686, 1)

[node name="CharacterEdit" type="Control"]
z_index = 3
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource("1_k1otl")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_q6kmt")

[node name="Sections" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_right = 100.0
offset_bottom = 372.0
grow_horizontal = 2
theme_override_constants/separation = 14
alignment = 1

[node name="Title" type="Label" parent="Sections"]
layout_mode = 2
theme_override_font_sizes/font_size = 42

[node name="HSeparator" type="HSeparator" parent="Sections"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="Name" type="LineEdit" parent="Sections"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
alignment = 1
max_length = 24
expand_to_text_length = true
caret_blink = true
caret_blink_interval = 0.5

[node name="Panel" type="ColorRect" parent="Sections"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
color = Color(0.137255, 0.564706, 0.388235, 1)

[node name="Control" type="Control" parent="Sections/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -0.5
offset_top = 20.0
offset_right = 0.5
offset_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2

[node name="Head" parent="Sections" instance=ExtResource("1_4yc65")]
layout_mode = 2
alignment = 1
PART = 1

[node name="Body" parent="Sections" instance=ExtResource("1_4yc65")]
layout_mode = 2
alignment = 1
PART = 2

[node name="Wand" parent="Sections" instance=ExtResource("1_4yc65")]
layout_mode = 2
alignment = 1
PART = 3

[node name="HSeparator2" type="HSeparator" parent="Sections"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Done" type="Button" parent="Sections"]
layout_mode = 2
size_flags_horizontal = 4
text = "   Done   "

[node name="Submit" type="Button" parent="Sections"]
layout_mode = 2
size_flags_horizontal = 4
text = "   Done (Submit to server)   "

[node name="SubmitNote" type="Label" parent="Sections"]
layout_mode = 2
text = "Note: You can only submit to server once"
horizontal_alignment = 1

[node name="HTTPRequest" type="HTTPRequest" parent="."]
use_threads = true
timeout = 20.0

[connection signal="text_changed" from="Sections/Name" to="." method="_on_name_text_changed"]
[connection signal="pressed" from="Sections/Done" to="." method="_on_done_pressed"]
[connection signal="pressed" from="Sections/Submit" to="." method="_on_submit_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_request_completed"]
